--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "highlight.js": "^9.15.10",
     "html-minifier": "^4.0.0",
     "marked": "^0.7.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "yuicompressor": "^2.4.8"
   }
 }
